--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -52,7 +52,7 @@ fmt.Printf("%x\n", sha256.Sum224(data))
 {% endtab %}
 {% endtabs %}
 
-{% code title="Sum方法签名" %}
+{% code title="包级别Sum方法签名" %}
 ```go
 func Sum256(data []byte) [Size]byte
 func Sum224(data []byte) (sum224 [Size224]byte)
@@ -63,29 +63,43 @@ func Sum224(data []byte) (sum224 [Size224]byte)
 
 该调用方式是对`对象调用方式`的封装，需要自己拼接待计算字符串，调用一次计算一次，每次都需要重新构造数据，不能做`序列化`操作
 
+{% tabs %}
+{% tab title="sha256" %}
 {% code title="对象调用方式" %}
 ```go
 h256 := sha256.New()
 h256.Write([]byte("These pretzels are"))
 h256.Write([]byte(" making me thirsty."))
-fmt.Printf("sha256: %x\n", h256.Sum(nil))
+fmt.Printf("%x\n", h256.Sum(nil))
 
+//output
+//86bda720f645a43e64f123e885577ab415d7146bf8fc7da3285ee5b99f52766f
+```
+{% endcode %}
+{% endtab %}
+
+{% tab title="sha224" %}
+{% code title="对象调用方式" %}
+```go
 h224 := sha256.New224()
 h224.Write([]byte("These pretzels are"))
 h224.Write([]byte(" making me thirsty."))
 fmt.Printf("sha224: %x\n", h224.Sum(nil))
 
 //output
-//sha256: 86bda720f645a43e64f123e885577ab415d7146bf8fc7da3285ee5b99f52766f
-//sha224: f37ba2701f3dee0267d068e2a86b164a03c6a7d7c498fdb32b04f09b
+//f37ba2701f3dee0267d068e2a86b164a03c6a7d7c498fdb32b04f09b
 ```
 {% endcode %}
+{% endtab %}
+{% endtabs %}
 
 调用`sha256.New()`或者`sha256.New224()`生成一个`sha256.digest`结构体对象，并赋初始值。`sha256.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
 
-### 计算文件SHA1值
+### 计算文件SHA256/224值
 
-{% code title="计算文件SHA256/224值" %}
+{% tabs %}
+{% tab title="sha256" %}
+{% code title="计算文件SHA256值" %}
 ```go
 f, err := os.Open("file.txt")
 if err != nil {
@@ -94,27 +108,44 @@ if err != nil {
 defer f.Close()
 
 h256 := sha256.New()
-h224 := sha256.New224()
 if _, err := io.Copy(h256, f); err != nil {
     log.Fatal(err)
 }
-f.Seek(0, 0)
+
+fmt.Printf("%x\n", h256.Sum(nil))
+```
+{% endcode %}
+{% endtab %}
+
+{% tab title="sha224" %}
+{% code title="计算文件SHA224值" %}
+```go
+f, err := os.Open("file.txt")
+if err != nil {
+    log.Fatal(err)
+}
+defer f.Close()
+
+h224 := sha256.New224()
 if _, err := io.Copy(h224, f); err != nil {
     log.Fatal(err)
 }
 
-fmt.Printf("sha256: %x\n", h256.Sum(nil))
-fmt.Printf("sha224: %x\n", h224.Sum(nil))
+fmt.Printf("%x\n", h224.Sum(nil))
 ```
 {% endcode %}
+{% endtab %}
+{% endtabs %}
 
 文件`SHA256/224`值计算是以`对象调用方式`追加写的形式实现的
 
 ### 序列化/反序列化
 
+{% tabs %}
+{% tab title="sha256" %}
 {% code title="序列化/反序列化" %}
 ```go
-h := sha1.New()
+h := sha256.New()
 h.Write([]byte("These pretzels are"))
 
 mb, err := h.(encoding.BinaryMarshaler).MarshalBinary()
@@ -123,7 +154,7 @@ if err != nil {
 }
 fmt.Println(mb)
 
-nh := sha1.New()
+nh := sha256.New()
 err = nh.(encoding.BinaryUnmarshaler).UnmarshalBinary(mb)
 if err != nil {
     fmt.Println(err)
@@ -136,33 +167,39 @@ fmt.Printf("%x\n", h.Sum(nil))
 fmt.Printf("%x\n", nh.Sum(nil))
 ```
 {% endcode %}
+{% endtab %}
 
-### ConstantTimeSum
-
-{% code title="ConstantTimeSum" %}
+{% tab title="sha224" %}
+{% code title="序列化/反序列化" %}
 ```go
-type constantSum interface {
-    ConstantTimeSum(in []byte) []byte
-}
-h := sha1.New()
+h := sha256.New224()
 h.Write([]byte("These pretzels are"))
-h.Write([]byte(" making me thirsty."))
-fmt.Printf("%x\n", h.(constantSum).ConstantTimeSum(nil))
 
-//output
-//7a0f82aac45ddc67ac3652f01fb5f731ec8f64a6
+mb, err := h.(encoding.BinaryMarshaler).MarshalBinary()
+if err != nil {
+    fmt.Println(err)
+}
+fmt.Println(mb)
+
+nh := sha256.New224()
+err = nh.(encoding.BinaryUnmarshaler).UnmarshalBinary(mb)
+if err != nil {
+    fmt.Println(err)
+}
+
+h.Write([]byte(" making me thirsty."))
+nh.Write([]byte(" making me thirsty."))
+
+fmt.Printf("%x\n", h.Sum(nil))
+fmt.Printf("%x\n", nh.Sum(nil))
 ```
 {% endcode %}
+{% endtab %}
+{% endtabs %}
 
-`sha1.digest`对象还包含一个`ConstantTimeSum`方法，该方法是`Sum`方法的替代，根据官方说明`ConstantTimeSum`的计算结果和`Sum`一致，但是运行时长是**固定的**
+## SHA256/224的计算方式
 
-{% hint style="warning" %}
-防止基于时间的`侧信道攻击`请使用`ConstantTimeSum`，Golang自身`tls`计算`hmac-sha1`使用的就是`ConstantTimeSum`
-{% endhint %}
-
-## SHA1的计算方式
-
-![SHA1处理流程示意图](../images/hash/sha1/sha1-calc-process.png)
+![SHA256/224处理流程示意图](../images/hash/sha1/sha1-calc-process.png)
 
 SHA1的计算流程如图所示
 - 每凑够一组`[BlockSize]byte`就进行一轮迭代
