--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -84,7 +84,7 @@ fmt.Printf("%x\n", h256.Sum(nil))
 h224 := sha256.New224()
 h224.Write([]byte("These pretzels are"))
 h224.Write([]byte(" making me thirsty."))
-fmt.Printf("sha224: %x\n", h224.Sum(nil))
+fmt.Printf("%x\n", h224.Sum(nil))
 
 //output
 //f37ba2701f3dee0267d068e2a86b164a03c6a7d7c498fdb32b04f09b
@@ -199,29 +199,30 @@ fmt.Printf("%x\n", nh.Sum(nil))
 
 ## SHA256/224的计算方式
 
-![SHA256/224处理流程示意图](../images/hash/sha1/sha1-calc-process.png)
+![SHA256/224处理流程示意图](../images/hash/sha256/sha256-calc-process.png)
 
-SHA1的计算流程如图所示
+SHA256/224的计算流程如图所示
 - 每凑够一组`[BlockSize]byte`就进行一轮迭代
-- 每轮迭代参与的数据为`前一组计算的SHA1值`和`本组数据`
-- 每轮迭代经历四组运算（round1~round4），每组`20`次运行，输出结果为本轮迭代后的SHA1值
-- 第一个分组计算时，由于没有`前一组计算的SHA1值`需要使用默认的一组魔数作为初始值
+- 每轮迭代参与的数据为`前一组计算的SHA256值`和`本组数据`
+- 每轮迭代经历两组运算（round1、round2），每组`64`次运行，输出结果为本轮迭代后的SHA256值
+- 第一个分组计算时，由于没有`前一组计算的SHA256值`需要根据需要计算的是`224`还是`256`选择不同的魔数作为初始值
 - 最后一个分组需要做填充操作，使满足`(待处理字节数+填充字节数) % BlockSize == 0`
 - 填充规则，头尾为固定长度`1+8`个字节，需要计算出中间`0`值的个数
     - 1字节的结束标识，取值为`0x80`
     - 0-63个字节的`0`值填充
     - 8字节长度，保存待计算字符串的字节数
+- `sha224`的返回结果是在`256bit`计算结果的基础上截取前`224bit`返回
 
 ### Go语言实现
 #### digest结构体
 
-![sha1.digest结构体示意图](../images/hash/sha1/sha1-digest.png)
+![sha256.digest结构体示意图](../images/hash/sha256/sha256-digest.png)
 
-> 如图`digest`结构体包含四个部分，标注的色块为SHA1处理流程示意图中的相关位置
+> 如图`digest`结构体包含五个部分，标注的色块为SHA256处理流程示意图中的相关位置
 
-Go语言中SHA1的计算都依赖于`digest`结构体
+Go语言中SHA256/224的计算都依赖于`digest`结构体
 
-`digest.s`：存储的是SHA1的值（包括`初始值`和`前一组的计算结果`）
+`digest.s`：存储的是SHA256/224的值（包括`初始值`和`前一组的计算结果`）
 
 `digest.x`：存储的是没有凑够分组的待计算字符串
 
@@ -229,12 +230,14 @@ Go语言中SHA1的计算都依赖于`digest`结构体
 
 `digest.len`：存储的是调用`Write`方法写入的字节数
 
+`digest.is224`：标识需要进行`sha256`还是`sha224`的计算
+
 #### 方法调用流程
 
-无论是`sha1包方法调用`还是`对象调用方式`，底层的调用逻辑基本一致
+无论是`sha256包方法调用`还是`对象调用方式`，底层的调用逻辑基本一致
 
-1. New一个`digest`对象
-2. 调用`digest.Reset`方法，对结构体中的变量赋初值
+1. New一个`digest`对象，标识是进行`sha256`还是`sha224`的计算
+2. 调用`digest.Reset`方法，根据`digest.is224`的取值，对结构体中的变量赋不同的初值
 3. 调用`digest.Write`方法写入数据**并进行计算**
 4. 调用`digest.checkSum`方法，生成填充数据，调用`digest.Write`方法，写入填充数据并计算最后的数据分组，生成最终结果
 
@@ -248,9 +251,8 @@ func (d *digest) Write(p []byte) (nn int, err error) {
     if d.nx > 0 {
         n := copy(d.x[d.nx:], p)
         d.nx += n
-        if d.nx == chunk {
-            //如果凑够一个分组就进行计算
-            block(d, d.x[:])	//block方法中会根据CPU参数判断执行汇编方法还是go方法
+        if d.nx == chunk { //如果凑够一个分组就进行计算
+            block(d, d.x[:]) //block方法中会根据CPU参数判断执行汇编方法还是go方法
             d.nx = 0
         }
         //更改偏移量，将写入d.x中的字节去掉
@@ -269,7 +271,7 @@ func (d *digest) Write(p []byte) (nn int, err error) {
          * go源码中位运算的方式效率更高，但是需要的条
          * 是 BlockSize 必须是 2^n 这种形式
          */
-        block(d, p[:n])	//block方法中会根据CPU参数判断执行汇编方法还是go方法
+        block(d, p[:n]) //block方法中会根据CPU参数判断执行汇编方法还是go方法
         //更改偏移量，将进行过计算的数据去掉
         p = p[n:]
     }
