--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -52,12 +52,23 @@ fmt.Printf("%x\n", sha256.Sum224(data))
 {% endtab %}
 {% endtabs %}
 
-{% code title="包级别Sum方法签名" %}
+{% tabs %}
+{% tab title="sha256" %}
+{% code title="包级别Sum256方法签名" %}
 ```go
 func Sum256(data []byte) [Size]byte
+```
+{% endcode %}
+{% endtab %}
+
+{% tab title="sha224" %}
+{% code title="包级别Sum224方法签名" %}
+```go
 func Sum224(data []byte) (sum224 [Size224]byte)
 ```
 {% endcode %}
+{% endtab %}
+{% endtabs %}
 
 根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size`或者`Size224`大小的`byte`数组
 
