--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -59,6 +59,7 @@ fmt.Printf("%x\n", sha256.Sum224(data))
 func Sum256(data []byte) [Size]byte
 ```
 {% endcode %}
+根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size`大小的`byte`数组
 {% endtab %}
 
 {% tab title="sha224" %}
@@ -67,10 +68,9 @@ func Sum256(data []byte) [Size]byte
 func Sum224(data []byte) (sum224 [Size224]byte)
 ```
 {% endcode %}
+根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size224`大小的`byte`数组
 {% endtab %}
 {% endtabs %}
-
-根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size`或者`Size224`大小的`byte`数组
 
 该调用方式是对`对象调用方式`的封装，需要自己拼接待计算字符串，调用一次计算一次，每次都需要重新构造数据，不能做`序列化`操作
 
