--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -126,6 +126,7 @@ if _, err := io.Copy(h256, f); err != nil {
 fmt.Printf("%x\n", h256.Sum(nil))
 ```
 {% endcode %}
+文件`SHA256`值计算是以`对象调用方式`追加写的形式实现的
 {% endtab %}
 
 {% tab title="sha224" %}
@@ -145,10 +146,9 @@ if _, err := io.Copy(h224, f); err != nil {
 fmt.Printf("%x\n", h224.Sum(nil))
 ```
 {% endcode %}
+文件`SHA224`值计算是以`对象调用方式`追加写的形式实现的
 {% endtab %}
 {% endtabs %}
-
-文件`SHA256/224`值计算是以`对象调用方式`追加写的形式实现的
 
 ### 序列化/反序列化
 
