--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -16,17 +16,17 @@ const Size224 = 28
 ```
 {% endcode %}
 
-计算hash值过程中，输入数据以`[BlockSize]byte`大小进行分组，凑够一组就能进行一次hash迭代，最终计算结果保存在一个`[Size]byte`大小的**数组**中返回，如果是`sha224`则需要对返回的数组进行截断，只返回前`28`个字节
+计算hash值过程中，输入数据以`[BlockSize]byte`大小进行分组，凑够一组就能进行一次hash迭代，最终计算结果保存在一个`[Size]byte`大小的**数组**中返回，如果是`SHA224`则需要对返回的数组进行截断，只返回前`28`个`byte`
 
 ## 示例
 
-### 计算字符串sha256/224值
+### 计算字符串SHA256/224值
 
 Go提供了两种调用方式
 
 {% tabs %}
-{% tab title="sha256" %}
-{% code title="sha256包方法调用" %}
+{% tab title="SHA256" %}
+{% code title="SHA256包方法调用" %}
 ```go
 data := []byte("These pretzels are")
 data = append(data, " making me thirsty."...)
@@ -38,8 +38,8 @@ fmt.Printf("%x\n", sha256.Sum256(data))
 {% endcode %}
 {% endtab %}
 
-{% tab title="sha224" %}
-{% code title="sha224包方法调用" %}
+{% tab title="SHA224" %}
+{% code title="SHA224包方法调用" %}
 ```go
 data := []byte("These pretzels are")
 data = append(data, " making me thirsty."...)
@@ -53,8 +53,8 @@ fmt.Printf("%x\n", sha256.Sum224(data))
 {% endtabs %}
 
 {% tabs %}
-{% tab title="sha256" %}
-{% code title="包级别Sum256方法签名" %}
+{% tab title="SHA256" %}
+{% code title="sha256.Sum256方法签名" %}
 ```go
 func Sum256(data []byte) [Size]byte
 ```
@@ -62,8 +62,8 @@ func Sum256(data []byte) [Size]byte
 根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size`大小的`byte`数组
 {% endtab %}
 
-{% tab title="sha224" %}
-{% code title="包级别Sum224方法签名" %}
+{% tab title="SHA224" %}
+{% code title="sha256.Sum224方法签名" %}
 ```go
 func Sum224(data []byte) (sum224 [Size224]byte)
 ```
@@ -75,7 +75,7 @@ func Sum224(data []byte) (sum224 [Size224]byte)
 该调用方式是对`对象调用方式`的封装，需要自己拼接待计算字符串，调用一次计算一次，每次都需要重新构造数据，不能做`序列化`操作
 
 {% tabs %}
-{% tab title="sha256" %}
+{% tab title="SHA256" %}
 {% code title="对象调用方式" %}
 ```go
 h256 := sha256.New()
@@ -89,7 +89,7 @@ fmt.Printf("%x\n", h256.Sum(nil))
 {% endcode %}
 {% endtab %}
 
-{% tab title="sha224" %}
+{% tab title="SHA224" %}
 {% code title="对象调用方式" %}
 ```go
 h224 := sha256.New224()
@@ -109,7 +109,7 @@ fmt.Printf("%x\n", h224.Sum(nil))
 ### 计算文件SHA256/224值
 
 {% tabs %}
-{% tab title="sha256" %}
+{% tab title="SHA256" %}
 {% code title="计算文件SHA256值" %}
 ```go
 f, err := os.Open("file.txt")
@@ -129,7 +129,7 @@ fmt.Printf("%x\n", h256.Sum(nil))
 文件`SHA256`值计算是以`对象调用方式`追加写的形式实现的
 {% endtab %}
 
-{% tab title="sha224" %}
+{% tab title="SHA224" %}
 {% code title="计算文件SHA224值" %}
 ```go
 f, err := os.Open("file.txt")
@@ -153,7 +153,7 @@ fmt.Printf("%x\n", h224.Sum(nil))
 ### 序列化/反序列化
 
 {% tabs %}
-{% tab title="sha256" %}
+{% tab title="SHA256" %}
 {% code title="序列化/反序列化" %}
 ```go
 h := sha256.New()
@@ -180,7 +180,7 @@ fmt.Printf("%x\n", nh.Sum(nil))
 {% endcode %}
 {% endtab %}
 
-{% tab title="sha224" %}
+{% tab title="SHA224" %}
 {% code title="序列化/反序列化" %}
 ```go
 h := sha256.New224()
@@ -222,7 +222,7 @@ SHA256/224的计算流程如图所示
     - 1字节的结束标识，取值为`0x80`
     - 0-63个字节的`0`值填充
     - 8字节长度，保存待计算字符串的字节数
-- `sha224`的返回结果是在`256bit`计算结果的基础上截取前`224bit`返回
+- `SHA224`的返回结果是在`256bit`计算结果的基础上截取前`224bit`返回
 
 ### Go语言实现
 #### digest结构体
@@ -233,7 +233,7 @@ SHA256/224的计算流程如图所示
 
 Go语言中SHA256/224的计算都依赖于`digest`结构体
 
-`digest.s`：存储的是SHA256/224的值（包括`初始值`和`前一组的计算结果`）
+`digest.s`：存储的是`SHA256`的值（包括`初始值`和`前一组的计算结果`）
 
 `digest.x`：存储的是没有凑够分组的待计算字符串
 
@@ -241,13 +241,13 @@ Go语言中SHA256/224的计算都依赖于`digest`结构体
 
 `digest.len`：存储的是调用`Write`方法写入的字节数
 
-`digest.is224`：标识需要进行`sha256`还是`sha224`的计算
+`digest.is224`：标识进行是`SHA256`还是`SHA224`的计算
 
 #### 方法调用流程
 
-无论是`sha256包方法调用`还是`对象调用方式`，底层的调用逻辑基本一致
+无论是`SHA256包方法调用`还是`对象调用方式`，底层的调用逻辑基本一致
 
-1. New一个`digest`对象，标识是进行`sha256`还是`sha224`的计算
+1. New一个`digest`对象，标识是进行`SHA256`还是`SHA224`的计算
 2. 调用`digest.Reset`方法，根据`digest.is224`的取值，对结构体中的变量赋不同的初值
 3. 调用`digest.Write`方法写入数据**并进行计算**
 4. 调用`digest.checkSum`方法，生成填充数据，调用`digest.Write`方法，写入填充数据并计算最后的数据分组，生成最终结果
