--- a/hash/sha512.md
+++ b/hash/sha512.md
@@ -3,7 +3,7 @@
 ## 概述
 
 {% hint style="info" %}
-sha512包实现了`FIPS 180-4`中定义的`SHA-384` `SHA-512` `SHA-512/224` `SHA-512/256`哈希算法
+sha512包实现了`FIPS 180-4`中定义的`SHA512` `SHA384` `SHA512/256` `SHA512/224`哈希算法
 {% endhint %}
 
 ## 常量
@@ -18,7 +18,7 @@ const Size384 = 48
 ```
 {% endcode %}
 
-计算hash值过程中，输入数据以`[BlockSize]byte`大小进行分组，凑够一组就能进行一次hash迭代，最终计算结果保存在一个`[Size]byte`大小的**数组**中返回，如果是`SHA-512/224` `SHA-512/256` `SHA-384`则需要对返回的数组进行截断
+计算hash值过程中，输入数据以`[BlockSize]byte`大小进行分组，凑够一组就能进行一次hash迭代，最终计算结果保存在一个`[Size]byte`大小的**数组**中返回，如果是`SHA384` `SHA512/256` `SHA512/224`则需要对返回的数组进行截断
 
 ## 示例
 
@@ -27,8 +27,8 @@ const Size384 = 48
 Go提供了两种调用方式
 
 {% tabs %}
-{% tab title="sha512" %}
-{% code title="sha512包方法调用" %}
+{% tab title="SHA512" %}
+{% code title="SHA512包方法调用" %}
 ```go
 data := []byte("These pretzels are")
 data = append(data, " making me thirsty."...)
@@ -40,8 +40,8 @@ fmt.Printf("%x\n", sha512.Sum512(data))
 {% endcode %}
 {% endtab %}
 
-{% tab title="sha384" %}
-{% code title="sha384包方法调用" %}
+{% tab title="SHA384" %}
+{% code title="SHA384包方法调用" %}
 ```go
 data := []byte("These pretzels are")
 data = append(data, " making me thirsty."...)
@@ -53,8 +53,8 @@ fmt.Printf("%x\n", sha512.Sum384(data))
 {% endcode %}
 {% endtab %}
 
-{% tab title="sha512/256" %}
-{% code title="sha512/256包方法调用" %}
+{% tab title="SHA512/256" %}
+{% code title="SHA512/256包方法调用" %}
 ```go
 data := []byte("These pretzels are")
 data = append(data, " making me thirsty."...)
@@ -66,8 +66,8 @@ fmt.Printf("%x\n", sha512.Sum512_256(data))
 {% endcode %}
 {% endtab %}
 
-{% tab title="sha512/224" %}
-{% code title="sha512/224包方法调用" %}
+{% tab title="SHA512/224" %}
+{% code title="SHA512/224包方法调用" %}
 ```go
 data := []byte("These pretzels are")
 data = append(data, " making me thirsty."...)
@@ -81,8 +81,8 @@ fmt.Printf("%x\n", sha512.Sum512_224(data))
 {% endtabs %}
 
 {% tabs %}
-{% tab title="sha512" %}
-{% code title="包级别Sum512方法签名" %}
+{% tab title="SHA512" %}
+{% code title="sha512.Sum512方法签名" %}
 ```go
 func Sum512(data []byte) [Size]byte
 ```
@@ -90,8 +90,8 @@ func Sum512(data []byte) [Size]byte
 根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size`大小的`byte`数组
 {% endtab %}
 
-{% tab title="sha384" %}
-{% code title="包级别Sum384方法签名" %}
+{% tab title="SHA384" %}
+{% code title="sha512.Sum384方法签名" %}
 ```go
 func Sum384(data []byte) (sum384 [Size384]byte)
 ```
@@ -99,8 +99,8 @@ func Sum384(data []byte) (sum384 [Size384]byte)
 根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size384`大小的`byte`数组
 {% endtab %}
 
-{% tab title="sha512/256" %}
-{% code title="包级别Sum512_256方法签名" %}
+{% tab title="SHA512/256" %}
+{% code title="sha512.Sum512_256方法签名" %}
 ```go
 func Sum512_256(data []byte) (sum256 [Size256]byte)
 ```
@@ -108,8 +108,8 @@ func Sum512_256(data []byte) (sum256 [Size256]byte)
 根据方法签名，调用时需要传入待计算的字符串，返回值为一个`Size256`大小的`byte`数组
 {% endtab %}
 
-{% tab title="sha512/224" %}
-{% code title="包级别Sum512_224方法签名" %}
+{% tab title="SHA512/224" %}
+{% code title="sha512.Sum512_224方法签名" %}
 ```go
 func Sum512_224(data []byte) (sum224 [Size224]byte)
 ```
@@ -121,42 +121,72 @@ func Sum512_224(data []byte) (sum224 [Size224]byte)
 该调用方式是对`对象调用方式`的封装，需要自己拼接待计算字符串，调用一次计算一次，每次都需要重新构造数据，不能做`序列化`操作
 
 {% tabs %}
-{% tab title="sha256" %}
+{% tab title="SHA512" %}
 {% code title="对象调用方式" %}
 ```go
-h256 := sha256.New()
+h512 := sha512.New()
+h512.Write([]byte("These pretzels are"))
+h512.Write([]byte(" making me thirsty."))
+fmt.Printf("%x\n", h512.Sum(nil))
+
+//output
+//c2db05e41d963524d2af33a5fe5402b0f629ea6e39f785e8efc8de653270f2668ce6b02dbf2a658f72a1ebe8099de8e2fb00e330972f0eb550ee7484a11433fa
+```
+{% endcode %}
+调用`sha512.New()`生成一个`sha512.digest`结构体对象，并赋初始值。`sha512.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
+{% endtab %}
+
+{% tab title="SHA384" %}
+{% code title="对象调用方式" %}
+```go
+h384 := sha512.New384()
+h384.Write([]byte("These pretzels are"))
+h384.Write([]byte(" making me thirsty."))
+fmt.Printf("%x\n", h384.Sum(nil))
+
+//output
+//da13ae04a4ac17f168be581db27c45d8259fa0d269b295f5bb060fc4d5472366534b3434394633e6b00f1b12954572d2
+```
+{% endcode %}
+调用`sha512.New384()`生成一个`sha512.digest`结构体对象，并赋初始值。`sha512.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
+{% endtab %}
+
+{% tab title="SHA512/256" %}
+{% code title="对象调用方式" %}
+```go
+h256 := sha512.New512_256()
 h256.Write([]byte("These pretzels are"))
 h256.Write([]byte(" making me thirsty."))
 fmt.Printf("%x\n", h256.Sum(nil))
 
 //output
-//86bda720f645a43e64f123e885577ab415d7146bf8fc7da3285ee5b99f52766f
+//00143111fe09dd965f0fd125b35edce386fddd7196d66db334080189808083bc
 ```
 {% endcode %}
+调用`sha512.New512_256()`生成一个`sha512.digest`结构体对象，并赋初始值。`sha512.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
 {% endtab %}
 
-{% tab title="sha224" %}
+{% tab title="SHA512/224" %}
 {% code title="对象调用方式" %}
 ```go
-h224 := sha256.New224()
+h224 := sha512.New512_224()
 h224.Write([]byte("These pretzels are"))
 h224.Write([]byte(" making me thirsty."))
 fmt.Printf("%x\n", h224.Sum(nil))
 
 //output
-//f37ba2701f3dee0267d068e2a86b164a03c6a7d7c498fdb32b04f09b
+//8d511d92c740c20be09fd4ffb16bf643502eddad26350919808aae0f
 ```
 {% endcode %}
+调用`sha512.New512_224()`生成一个`sha512.digest`结构体对象，并赋初始值。`sha512.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
 {% endtab %}
 {% endtabs %}
 
-调用`sha256.New()`或者`sha256.New224()`生成一个`sha256.digest`结构体对象，并赋初始值。`sha256.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
-
-### 计算文件SHA256/224值
+### 计算文件SHA512/384/256/224值
 
 {% tabs %}
-{% tab title="sha256" %}
-{% code title="计算文件SHA256值" %}
+{% tab title="SHA512" %}
+{% code title="计算文件SHA512值" %}
 ```go
 f, err := os.Open("file.txt")
 if err != nil {
@@ -164,7 +194,47 @@ if err != nil {
 }
 defer f.Close()
 
-h256 := sha256.New()
+h512 := sha512.New()
+if _, err := io.Copy(h512, f); err != nil {
+    log.Fatal(err)
+}
+
+fmt.Printf("%x\n", h512.Sum(nil))
+```
+{% endcode %}
+文件`SHA512`值计算是以`对象调用方式`追加写的形式实现的
+{% endtab %}
+
+{% tab title="SHA384" %}
+{% code title="计算文件SHA384值" %}
+```go
+f, err := os.Open("file.txt")
+if err != nil {
+    log.Fatal(err)
+}
+defer f.Close()
+
+h384 := sha512.New384()
+if _, err := io.Copy(h384, f); err != nil {
+    log.Fatal(err)
+}
+
+fmt.Printf("%x\n", h384.Sum(nil))
+```
+{% endcode %}
+文件`SHA384`值计算是以`对象调用方式`追加写的形式实现的
+{% endtab %}
+
+{% tab title="SHA512/256" %}
+{% code title="计算文件SHA512/256值" %}
+```go
+f, err := os.Open("file.txt")
+if err != nil {
+    log.Fatal(err)
+}
+defer f.Close()
+
+h256 := sha512.New512_256()
 if _, err := io.Copy(h256, f); err != nil {
     log.Fatal(err)
 }
@@ -172,10 +242,11 @@ if _, err := io.Copy(h256, f); err != nil {
 fmt.Printf("%x\n", h256.Sum(nil))
 ```
 {% endcode %}
+文件`SHA512/256`值计算是以`对象调用方式`追加写的形式实现的
 {% endtab %}
 
-{% tab title="sha224" %}
-{% code title="计算文件SHA224值" %}
+{% tab title="SHA512/224" %}
+{% code title="计算文件SHA512/224值" %}
 ```go
 f, err := os.Open("file.txt")
 if err != nil {
@@ -183,7 +254,7 @@ if err != nil {
 }
 defer f.Close()
 
-h224 := sha256.New224()
+h224 := sha512.New512_224()
 if _, err := io.Copy(h224, f); err != nil {
     log.Fatal(err)
 }
@@ -191,18 +262,17 @@ if _, err := io.Copy(h224, f); err != nil {
 fmt.Printf("%x\n", h224.Sum(nil))
 ```
 {% endcode %}
+文件`SHA512/224`值计算是以`对象调用方式`追加写的形式实现的
 {% endtab %}
 {% endtabs %}
-
-文件`SHA256/224`值计算是以`对象调用方式`追加写的形式实现的
 
 ### 序列化/反序列化
 
 {% tabs %}
-{% tab title="sha256" %}
+{% tab title="SHA256" %}
 {% code title="序列化/反序列化" %}
 ```go
-h := sha256.New()
+h := sha512.New()
 h.Write([]byte("These pretzels are"))
 
 mb, err := h.(encoding.BinaryMarshaler).MarshalBinary()
@@ -211,7 +281,7 @@ if err != nil {
 }
 fmt.Println(mb)
 
-nh := sha256.New()
+nh := sha512.New()
 err = nh.(encoding.BinaryUnmarshaler).UnmarshalBinary(mb)
 if err != nil {
     fmt.Println(err)
@@ -226,10 +296,10 @@ fmt.Printf("%x\n", nh.Sum(nil))
 {% endcode %}
 {% endtab %}
 
-{% tab title="sha224" %}
+{% tab title="SHA384" %}
 {% code title="序列化/反序列化" %}
 ```go
-h := sha256.New224()
+h := sha512.New384()
 h.Write([]byte("These pretzels are"))
 
 mb, err := h.(encoding.BinaryMarshaler).MarshalBinary()
@@ -238,7 +308,61 @@ if err != nil {
 }
 fmt.Println(mb)
 
-nh := sha256.New224()
+nh := sha512.New384()
+err = nh.(encoding.BinaryUnmarshaler).UnmarshalBinary(mb)
+if err != nil {
+    fmt.Println(err)
+}
+
+h.Write([]byte(" making me thirsty."))
+nh.Write([]byte(" making me thirsty."))
+
+fmt.Printf("%x\n", h.Sum(nil))
+fmt.Printf("%x\n", nh.Sum(nil))
+```
+{% endcode %}
+{% endtab %}
+
+{% tab title="SHA512/256" %}
+{% code title="序列化/反序列化" %}
+```go
+h := sha512.New512_256()
+h.Write([]byte("These pretzels are"))
+
+mb, err := h.(encoding.BinaryMarshaler).MarshalBinary()
+if err != nil {
+    fmt.Println(err)
+}
+fmt.Println(mb)
+
+nh := sha512.New512_256()
+err = nh.(encoding.BinaryUnmarshaler).UnmarshalBinary(mb)
+if err != nil {
+    fmt.Println(err)
+}
+
+h.Write([]byte(" making me thirsty."))
+nh.Write([]byte(" making me thirsty."))
+
+fmt.Printf("%x\n", h.Sum(nil))
+fmt.Printf("%x\n", nh.Sum(nil))
+```
+{% endcode %}
+{% endtab %}
+
+{% tab title="SHA512/224" %}
+{% code title="序列化/反序列化" %}
+```go
+h := sha512.New512_224()
+h.Write([]byte("These pretzels are"))
+
+mb, err := h.(encoding.BinaryMarshaler).MarshalBinary()
+if err != nil {
+    fmt.Println(err)
+}
+fmt.Println(mb)
+
+nh := sha512.New512_224()
 err = nh.(encoding.BinaryUnmarshaler).UnmarshalBinary(mb)
 if err != nil {
     fmt.Println(err)
@@ -254,32 +378,34 @@ fmt.Printf("%x\n", nh.Sum(nil))
 {% endtab %}
 {% endtabs %}
 
-## SHA256/224的计算方式
+## SHA512/384/256/224的计算方式
 
-![SHA256/224处理流程示意图](../images/hash/sha256/sha256-calc-process.png)
+![SHA512/384/256/224处理流程示意图](../images/hash/sha512/sha512-calc-process.png)
 
-SHA256/224的计算流程如图所示
+SHA512/384/256/224的计算流程如图所示
 - 每凑够一组`[BlockSize]byte`就进行一轮迭代
-- 每轮迭代参与的数据为`前一组计算的SHA256值`和`本组数据`
-- 每轮迭代经历两组运算（round1、round2），每组`64`次运行，输出结果为本轮迭代后的SHA256值
-- 第一个分组计算时，由于没有`前一组计算的SHA256值`需要根据需要计算的是`224`还是`256`选择不同的魔数作为初始值
+- 每轮迭代参与的数据为`前一组计算的SHA512值`和`本组数据`
+- 每轮迭代经历两组运算（round1、round2），每组`80`次运行，输出结果为本轮迭代后的`SHA512`值
+- 第一个分组计算时，由于没有`前一组计算的SHA512值`需要根据需要计算的是`SHA512` `SHA384` `SHA512/256`还是`SHA512/224`选择不同的魔数作为初始值
 - 最后一个分组需要做填充操作，使满足`(待处理字节数+填充字节数) % BlockSize == 0`
-- 填充规则，头尾为固定长度`1+8`个字节，需要计算出中间`0`值的个数
+- 填充规则，头尾为固定长度`1+16`个字节，需要计算出中间`0`值的个数
     - 1字节的结束标识，取值为`0x80`
-    - 0-63个字节的`0`值填充
-    - 8字节长度，保存待计算字符串的字节数
-- `sha224`的返回结果是在`256bit`计算结果的基础上截取前`224bit`返回
+    - 0-127个字节的`0`值填充
+    - 16字节长度，保存待计算字符串的字节数
+- `SHA384`的返回结果是在`512bit`计算结果的基础上截取前`384bit`返回
+- `SHA512/256`的返回结果是在`512bit`计算结果的基础上截取前`256bit`返回
+- `SHA512/224`的返回结果是在`512bit`计算结果的基础上截取前`224bit`返回
 
 ### Go语言实现
 #### digest结构体
 
-![sha256.digest结构体示意图](../images/hash/sha256/sha256-digest.png)
+![sha512.digest结构体示意图](../images/hash/sha512/sha512-digest.png)
 
 > 如图`digest`结构体包含五个部分，标注的色块为SHA256处理流程示意图中的相关位置
 
 Go语言中SHA256/224的计算都依赖于`digest`结构体
 
-`digest.s`：存储的是SHA256/224的值（包括`初始值`和`前一组的计算结果`）
+`digest.s`：存储的是`SHA512`的值（包括`初始值`和`前一组的计算结果`）
 
 `digest.x`：存储的是没有凑够分组的待计算字符串
 
@@ -287,14 +413,14 @@ Go语言中SHA256/224的计算都依赖于`digest`结构体
 
 `digest.len`：存储的是调用`Write`方法写入的字节数
 
-`digest.is224`：标识需要进行`sha256`还是`sha224`的计算
+`digest.function`：标识需要进行`SHA512` `SHA384` `SHA512/256`还是`SHA512/224`的计算
 
 #### 方法调用流程
 
-无论是`sha256包方法调用`还是`对象调用方式`，底层的调用逻辑基本一致
+无论是`SHA512包方法调用`还是`对象调用方式`，底层的调用逻辑基本一致
 
-1. New一个`digest`对象，标识是进行`sha256`还是`sha224`的计算
-2. 调用`digest.Reset`方法，根据`digest.is224`的取值，对结构体中的变量赋不同的初值
+1. New一个`digest`对象，标识需要进行`SHA512` `SHA384` `SHA512/256`还是`SHA512/224`的计算
+2. 调用`digest.Reset`方法，根据`digest.function`的取值，对结构体中的变量赋不同的初值
 3. 调用`digest.Write`方法写入数据**并进行计算**
 4. 调用`digest.checkSum`方法，生成填充数据，调用`digest.Write`方法，写入填充数据并计算最后的数据分组，生成最终结果
 
@@ -308,9 +434,9 @@ func (d *digest) Write(p []byte) (nn int, err error) {
     if d.nx > 0 {
         n := copy(d.x[d.nx:], p)
         d.nx += n
-        if d.nx == chunk { //如果凑够一个分组就进行计算
-            block(d, d.x[:]) //block方法中会根据CPU参数判断执行汇编方法还是go方法
-            d.nx = 0
+        if d.nx == chunk {	//如果凑够一个分组就进行计算
+          block(d, d.x[:])	//sha512没有汇编方法
+          d.nx = 0
         }
         //更改偏移量，将写入d.x中的字节去掉
         p = p[n:]
@@ -328,7 +454,7 @@ func (d *digest) Write(p []byte) (nn int, err error) {
          * go源码中位运算的方式效率更高，但是需要的条
          * 是 BlockSize 必须是 2^n 这种形式
          */
-        block(d, p[:n]) //block方法中会根据CPU参数判断执行汇编方法还是go方法
+        block(d, p[:n])	//sha512没有汇编方法
         //更改偏移量，将进行过计算的数据去掉
         p = p[n:]
     }
