--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -87,6 +87,7 @@ fmt.Printf("%x\n", h256.Sum(nil))
 //86bda720f645a43e64f123e885577ab415d7146bf8fc7da3285ee5b99f52766f
 ```
 {% endcode %}
+调用`sha256.New()`生成一个`sha256.digest`结构体对象，并赋初始值。`sha256.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
 {% endtab %}
 
 {% tab title="SHA224" %}
@@ -101,10 +102,9 @@ fmt.Printf("%x\n", h224.Sum(nil))
 //f37ba2701f3dee0267d068e2a86b164a03c6a7d7c498fdb32b04f09b
 ```
 {% endcode %}
+调用`sha256.New224()`生成一个`sha256.digest`结构体对象，并赋初始值。`sha256.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
 {% endtab %}
 {% endtabs %}
-
-调用`sha256.New()`或者`sha256.New224()`生成一个`sha256.digest`结构体对象，并赋初始值。`sha256.digest`实现了`hash.Hash`接口。关于`hash.Hash`的相关说明请参考[接口说明](./interfaces.md)。`digest.Sum`方法返回值类型为**切片**，这点和包调用方式不同
 
 ### 计算文件SHA256/224值
 
@@ -216,7 +216,7 @@ SHA256/224的计算流程如图所示
 - 每凑够一组`[BlockSize]byte`就进行一轮迭代
 - 每轮迭代参与的数据为`前一组计算的SHA256值`和`本组数据`
 - 每轮迭代经历两组运算（round1、round2），每组`64`次运行，输出结果为本轮迭代后的SHA256值
-- 第一个分组计算时，由于没有`前一组计算的SHA256值`需要根据需要计算的是`224`还是`256`选择不同的魔数作为初始值
+- 第一个分组计算时，由于没有`前一组计算的SHA256值`需要根据需要计算的是`SHA256`还是`SHA224`选择不同的魔数作为初始值
 - 最后一个分组需要做填充操作，使满足`(待处理字节数+填充字节数) % BlockSize == 0`
 - 填充规则，头尾为固定长度`1+8`个字节，需要计算出中间`0`值的个数
     - 1字节的结束标识，取值为`0x80`
