--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -294,3 +294,30 @@ func (d *digest) Write(p []byte) (nn int, err error) {
     return
 }
 ```
+#### 填充计算解析
+```go
+/*
+    填充规则，头尾为固定长度 1+8 个字节，需要计算出中间 0 值的个数
+   - 1字节的结束标识，取值为 0x80
+   - 0-63个字节的 0 值填充
+   - 8字节长度，保存待计算字符串的字节数
+*/
+
+len := d.len
+//tmp数组第 0 个位置为 0x80，其他位置均为 0 值，0x80是超出ASCII范围的第一个值
+var tmp [64]byte
+tmp[0] = 0x80
+
+//这个版本的填充比MD5那版要容易理解的多
+//len%64 的取值范围是 0-63
+if len%64 < 56 {    //len%64 的取值范围是 0-55
+    d.Write(tmp[0 : 56-len%64]) //填充 0x80 + [0-55]个0值
+} else {    //len%64 的取值范围是 56-63
+    d.Write(tmp[0 : 64+56-len%64]) //填充 0x80 + [56-63]个0值
+}
+
+// Length in bits.
+len <<= 3 // 等价于 输入数据总比特位数
+binary.BigEndian.PutUint64(tmp[:], len)
+d.Write(tmp[0:8])
+```
