--- a/hash/sha512.md
+++ b/hash/sha512.md
@@ -466,3 +466,32 @@ func (d *digest) Write(p []byte) (nn int, err error) {
     return
 }
 ```
+#### 填充计算解析
+```go
+/*
+    填充规则，头尾为固定长度 1+16 个字节，需要计算出中间 0 值的个数
+   - 1字节的结束标识，取值为 0x80
+   - 0-127个字节的 0 值填充
+   - 16字节长度，保存待计算字符串的字节数
+*/
+
+len := d.len
+
+//tmp数组第 0 个位置为 0x80，其他位置均为 0 值，0x80是超出ASCII范围的第一个值
+var tmp [128]byte
+tmp[0] = 0x80
+// len%128 取值范围是 0-127
+if len%128 < 112 {	// len%128 取值范围是 0-111
+    d.Write(tmp[0 : 112-len%128])	//填充 0x80 + [0-111]个0值
+} else {	// len%128 取值范围是 112-127
+    d.Write(tmp[0 : 128+112-len%128])	//填充 0x80 + [112-127]个0值
+}
+
+// Length in bits.
+len <<= 3 // 等价于 输入数据总比特位数
+
+//d.len 是 uint64 类型占[8]byte，另一个[8]byte全 0 值
+binary.BigEndian.PutUint64(tmp[0:], 0) // upper 64 bits are always zero, because len variable has type uint64
+binary.BigEndian.PutUint64(tmp[8:], len)
+d.Write(tmp[0:16])
+```
