--- a/hash/sha512.md
+++ b/hash/sha512.md
@@ -396,6 +396,8 @@ SHA512/384/256/224的计算流程如图所示
 - `SHA512/256`的返回结果是在`512bit`计算结果的基础上截取前`256bit`返回
 - `SHA512/224`的返回结果是在`512bit`计算结果的基础上截取前`224bit`返回
 
+![SHA512/384/256/224填充示意图](../images/hash/padding/padding-127.png)
+
 ### Go语言实现
 #### digest结构体
 
