--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -224,6 +224,8 @@ SHA256/224的计算流程如图所示
     - 8字节长度，保存待计算字符串的字节数
 - `SHA224`的返回结果是在`256bit`计算结果的基础上截取前`224bit`返回
 
+![SHA256/224填充示意图](../images/hash/padding/padding-63.png)
+
 ### Go语言实现
 #### digest结构体
 
