求n方法解析

--- a/hash/sha256.md
+++ b/hash/sha256.md
@@ -284,15 +284,15 @@ func (d *digest) Write(p []byte) (nn int, err error) {
          * 已知 BlockSize = 64，二进制表示为 0000000001000000
          * len(p) % 64，取值范围是 0 ~ 63，
          * 二进制会落在 0000000001[000000] 低位的六个 0 的范围内
-         * 所以 xxxxxxxxxxxxxxxx
-         *   % 0000000001000000
-         * 可以转换为 xxxxxxxxxxxxxxxx
-         *        & 0000000000111111
-         *        -------------------- len(p) & (BlockSize - 1)
-         *    结果   0000000000xxxxxx
-         *        ^ xxxxxxxxxxxxxxxx
-         *        -------------------- len(p) ^ (len(p) & (BlockSize - 1))
-         *    结果   xxxxxxxxxx000000   n = BlockSize的最大整数倍
+         * 所以      xxxxxxxxxxxxxxxx  -> len(p)
+         *        % 0000000001000000  -> BlockSize
+         * 可以转换为 xxxxxxxxxxxxxxxx  -> len(p)
+         *        & 0000000000111111  -> BlockSize - 1
+         *        --------------------
+         *    结果   0000000000xxxxxx  -> len(p) & (BlockSize - 1)
+         *        ^ xxxxxxxxxxxxxxxx  -> len(p)
+         *        --------------------
+         *    结果   xxxxxxxxxx000000   n = len(p)中BlockSize的最大整数倍
          *
          * go源码中位运算的方式效率更高，但是需要的条
          * 是 BlockSize 必须是 2^n 这种形式
