--- a/hash/sha512.md
+++ b/hash/sha512.md
@@ -456,15 +456,15 @@ func (d *digest) Write(p []byte) (nn int, err error) {
          * 已知 BlockSize = 128，二进制表示为 00000000010000000
          * len(p) % 64，取值范围是 0 ~ 63，
          * 二进制会落在 0000000001[0000000] 低位的七个 0 的范围内
-         * 所以 xxxxxxxxxxxxxxxxx
-         *   % 00000000010000000
-         * 可以转换为 xxxxxxxxxxxxxxxxx
-         *        & 00000000001111111
-         *        --------------------- len(p) & (BlockSize - 1)
-         *    结果   0000000000xxxxxxx
-         *        ^ xxxxxxxxxxxxxxxxx
-         *        --------------------- len(p) ^ (len(p) & (BlockSize - 1))
-         *    结果   xxxxxxxxxx0000000   n = BlockSize的最大整数倍
+         * 所以      xxxxxxxxxxxxxxxxx  -> len(p)
+         *        % 00000000010000000  -> BlockSize
+         * 可以转换为 xxxxxxxxxxxxxxxxx  -> len(p)
+         *        & 00000000001111111  -> BlockSize - 1
+         *        ---------------------
+         *    结果   0000000000xxxxxxx  -> len(p) & (BlockSize - 1)
+         *        ^ xxxxxxxxxxxxxxxxx  -> len(p)
+         *        ---------------------
+         *    结果   xxxxxxxxxx0000000   n = len(p)中BlockSize的最大整数倍
          *
          * go源码中位运算的方式效率更高，但是需要的条
          * 是 BlockSize 必须是 2^n 这种形式
